# Energy-Budget-Control-Scheduling

./: .gitignore  README.md  analysis.ipynb  explanation.md  flake.nix  meson.build  plan.md  run_all.sh
assets/: cluster512.xml
assets/workload/sdscblue/: sdscblue_week101_delay.json  sdscblue_week103_delay.json  sdscblue_week105_delay.json  sdscblue_week109_delay.json  sdscblue_week110_delay.json  sdscblue_week112_delay.json  sdscblue_week80_delay.json  sdscblue_week96_delay.json  sdscblue_week97_delay.json  sdscblue_week98_delay.json
src/: easy.cpp  energy_common.h  energybud_idle.cpp  energybud_shutdown.cpp  pc_idle.cpp  pc_shutdown.cpp  reducepc_idle.cpp  reducepc_shutdown.cpp
